added comentator id to comment DB

--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -49,9 +49,9 @@
 
                         </div>
                         <br>
-                        <div uk-form-custom>
+                        <div uk-form-custom class="uk-width-3-5">
                             <input name="logoImage" type="file" id="logoImage">
-                            <button class="uk-button uk-width-2-5" type="button" tabindex="-1">Изменить
+                            <button class="uk-button uk-width-1" type="button" tabindex="-1">Изменить
                                 фото</button>
                         </div>
                     </div>
@@ -63,9 +63,9 @@
                         class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover" uk-img>
                     </div>
                     <br>
-                    <div uk-form-custom>
+                    <div uk-form-custom class="uk-width-2-5">
                         <input name="bgImage" type="file" id="bgImage">
-                        <button class="uk-button uk-width-1-5" type="button" tabindex="-1">Изменить
+                        <button class="uk-button uk-width-1" type="button" tabindex="-1">Изменить
                             фото</button>
                     </div>
                 </div>
