--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -7,17 +7,17 @@
     <div class="uk-width-1-3">
         <div class="uk-card-body uk-flex-row">
             <h3 class="uk-card-title uk-text-break">{{ product.product_name }}</h3>
-            <div class="uk-flex uk-margin-small-bottom">
-                <span>Срок изготовления:</span>
+            <div class="uk-flex-row uk-margin-medium-bottom ukwidth-1">
+                <label style="margin: 0">Срок полученгиея:</label>
+                <p class="textSmallInfo uk-border-rounded">{{product.duration}}</p>
             </div>
-            <p class="textSmallInfo uk-border-rounded">От 3х дней</p>
-            <div class="uk-flex-column-reverse">
-                <p class="uk-margin-small-bottom">Регион:</p>
+            <div class="uk-flex-row">
+                <lavel>Регион:</lavel>
                 <p class="textSmallInfo uk-border-rounded">{{product.country}}</p>
             </div>
             <br>
             <div class="price">
-                <label>Цена:</label>
+                <label style="margin: 0">Цена:</label>
                 <p class="uk-width-1-2 uk-text-center" style="text-align: center; margin: 0 auto; border-bottom: 1px solid gray; font-size: 1.5em;">{{ product.cost }} руб.</p>
             </div>
 
@@ -42,6 +42,7 @@
         background: rgba(69, 101, 232, 0.34);
         text-align: center;
         font-size: 20px;
+        margin: 1% auto; 
     }
 
     .textBigInfo span {
