--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -5,24 +5,29 @@
 
             <!-- start of bloc 1 -->
             <div class="tab" style="display: block;">
-                <label>Название товара</label>
+                <label>Название товара <i uk-tooltip="ВВедите название товара"
+                        class="fa-duotone fa-question"></i></label>
                 <div class="input-group mt-2 mb-2">
                     {{ form8.product_name }}
                 </div>
                 <br>
                 <br>
-                <label>Страна производитель</label> {{ form8.country }}
+                <label>Страна производитель <i uk-tooltip="В какой стране был произведенвашь товар?"
+                        class="fa-duotone fa-question"></i></label> {{ form8.country }}
                 <div class="input-group mt-2 mb-2">
                 </div>
                 <br>
                 <br>
-                <label>Бренд</label>
+                <label>Бренд <i uk-tooltip="Тут нужно указать назвение бренда товара"
+                        class="fa-duotone fa-question"></i></label>
                 <div class="input-group mt-2 mb-2">
                     {{ form8.brand }}
                 </div>
                 <br>
                 <br>
-                <label>Комлектация товара</label>
+                <label>Комлектация товара <i
+                        uk-tooltip="Введите все, что идет в комплекте с товаром. Не забудьте нажать на плючик, что бы добавить комплект к товару"
+                        class="fa-duotone fa-question"></i></label>
                 <div class="input-group mt-2 mb-2">
                     <input type="text" id="inputvalue" maxlength="40" class="form-control changible">
                     <button class="btn btn-outline-secondary" id="btnAdd" name="addComplect" onclick="addInput(this)"
@@ -40,7 +45,7 @@
 
             <!-- sart of block 2 -->
             <div class="tab" style="display: none">
-                <label>Цена</label>
+                <label>Цена <i uk-tooltip="Укажите цену вашего товара" class="fa-duotone fa-question"></i></label>
                 <div class=" input-group mb-3 ">
                     {{ form8.price }}
                     <span class="input-group-text ">.00</span>
@@ -63,20 +68,31 @@
 
             <!-- sart of block 3 -->
             <div class="tab" style="display: none">
-
-                <h2>Описание</h2>
+                <label>Описание <i
+                        uk-tooltip="Опишите свой товар. Так покупателям будет легче понять, что они точно хотят его купить"
+                        class="fa-duotone fa-question"></i></label>
 
                 {{ form8.description }}
-                <br>
+                    <br>
+                <div class="uk-flex uk-flex-middle uk-flex-between">
+                    <div class="uk-width-1-2">
+                        <label> Категория <i uk-tooltip="К какой категории вы относите свой товар?"
+                                class="fa-duotone fa-question"></i></label>
+                        {{ form8.category }}
+                    </div>
+                    <br>
+                    <div class="uk-width-1-2">
+                        <label> Срок получения товара <i
+                                uk-tooltip="Укажите, через сколько покупатель сможет получить свой товар после покупки"
+                                class="fa-duotone fa-question"></i></label>
+                        {{ form8.duration }}
+                    </div>
+                </div>
 
-                <label> Категория </label>
-                {{ form8.category }}
                 <br>
-                <label> Срок получения товара </label>
-                {{ form8.duration }}
-
-                <br>
-                <label>Ключевые слова</label>
+                <label>Ключевые слова <i
+                        uk-tooltip="Укажите ключевые слова, которые относятся к вашему товару. Так покупателя будет проще найти его"
+                        class="fa-duotone fa-question"></i></label>
                 <div class="input-group mt-2 mb-2">
                     <input type="text" id="keyValue" maxlength="40" class="form-control changible">
                     <button class="btn btn-outline-secondary" id="btnAddkey" name="addkey" onclick="addKey(this)"
@@ -88,24 +104,20 @@
 
                 <div class="row mt-3 mb-3">
                     <div class="col-md-8">
-                        <label class="labels">Загрузить фото</label>
+                        <label class="labels">Загрузить фото <i
+                                uk-tooltip="Загрузите фото товара, что бы все видели, какой он красивый"
+                                class="fa-duotone fa-question"></i></label>
                         <input id="fileupload" class="form-control" name="product_photos" type="file" />
                     </div>
                 </div>
                 <br>
                 <!--         IMAGE END      -->
 
-                <label>Дополнительная информация о товаре</label>
-                <button class="btn btn-outline-secondary" onclick="showExtraInputs()" type="button">
-                    <i class="fa fa-arrow-down"></i>
-                </button>
-                <br>
-                <br>
 
 
-
-                <div id="extraInputs" class="d-none">
-                    <label>Размер товара <b>(см)</b></label>
+                <div>
+                    <label>Размер товара <b>(см)</b> <i uk-tooltip="Тут надо указать размеры товара"
+                            class="fa-duotone fa-question"></i></label>
                     <div class="input-group mt-2 mb-2">
                         <span class="input-group-text">высота</span>
                         {{ form8.height_product }}
@@ -115,7 +127,9 @@
                         {{ form8.width_product }}
                         <br>
                     </div>
-                    <label>Размер упаковки <b>(см)</b></label>
+                    <label>Размер упаковки <b>(см)</b> <i
+                            uk-tooltip="Тут надо указать размеры упаковки(если ее нет, просто оставь поля нулевыми)."
+                            class="fa-duotone fa-question"></i></label>
                     <div class="input-group mt-2 mb-2">
                         <span class="input-group-text">высота</span>
                         {{ form8.height_packaging }}
@@ -127,11 +141,22 @@
                     </div>
                 </div>
             </div>
+            <!-- end of block 3 -->
+
+            <!-- sart of block 4 -->
+            <div class="tab uk-flex uk-flex-center uk-flex-middle"
+                style="height: 100%; width: 100%; margin: 20%; display: none">
+                <div class="uk-flex-row">
+                    <h1>Загрузка товара</h1>
+                    <p>Пожалуйста подождите...</p>
+                </div>
+            </div>
+            <!-- end of block 4 -->
+
             {% csrf_token %}
 
             <span>{{error}}</span>
 
-            <!-- end of block 3 -->
 
             <div style="overflow:auto;" id="next-previous">
                 <div style="float:right;">
@@ -167,9 +192,6 @@
         let height1 = document.getElementById('id_height_product').value
         let length1 = document.getElementById('id_length_product').value
         let width1 = document.getElementById('id_width_product').value
-        let height2 = document.getElementById('id_height_packaging').value
-        let length2 = document.getElementById('id_length_packaging').value
-        let width2 = document.getElementById('id_width_packaging').value
 
         if (n == 1) {
             if (pname < 3 || brand < 3 || comp == 0) {
@@ -195,7 +217,7 @@
 
         }
         if (n == 3) {
-            if (desc <= 0 || key == 0 || height1 <= 0 || length1 <= 0 || width1 <= 0 || height2 <= 0 || length2 <= 0 || width2 <= 0) {
+            if (desc <= 0 || key == 0 || height1 <= 0 || length1 <= 0 || width1 <= 0) {
                 document.getElementById("nextBtn").style["background-color"] = 'gray'
                 document.getElementById("nextBtn").disabled = true;
                 return 0
@@ -345,9 +367,13 @@
                 addComplectation()
                 document.getElementById("prevBtn").style.display = "inline";
                 PassChecker(2)
-            } else if (n == x.length - 1){
+            } else if (n == x.length - 2) {
                 document.getElementById("nextBtn").disabled = true;
                 PassChecker(3)
+            } else if (n == x.length - 1) {
+                document.getElementById("prevBtn").style.display = "none";
+                document.getElementById("nextBtn").style.display = "none";
+
             } else {
                 for (let i = 0; i < len; i++) {
                     document.getElementById('table').children[0].remove()
@@ -364,7 +390,7 @@
         if (n > 0 && currentTab < 2) {
             if (PassChecker(currentTab + 1)) {
                 x[currentTab].style.display = "none";
-                currentTab = currentTab + n;                
+                currentTab = currentTab + n;
                 document.getElementById("nextBtn").style["background-color"] = 'gray'
                 showTab(currentTab);
             } else {
@@ -378,7 +404,7 @@
         } else {
             x[currentTab].style.display = "none";
             currentTab = currentTab + n;
-            if (currentTab === x.length) {
+            if (currentTab === x.length - 1) {
                 document.getElementById('nextBtn').type = "submit"
                 localStorage.page = 5;
                 document.getElementById('next-previous').classList.add("redirect");
