--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -256,8 +256,7 @@
                             <p class="uk-text-right">
                                 <button class="uk-button uk-button-default uk-modal-close"
                                     type="button">Закрыть</button>
-                                <button name="comment_product" class="uk-button uk-button-primary" type="submit"
-                                    onclick="UIkit.notification({message: 'Отзыв сохранён', status: 'success'})">Опубликовать</button>
+                                <button name="comment_product" class="uk-button uk-button-primary" type="submit">Опубликовать</button>
                             </p>
                         </form>
                     </div>
