--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <button style="color: black; background-color:darkgray"
-                    class="uk-button uk-border-pill uk-width-1-1 uk-margin-small-bottom">Показать коннтакты
+                    class="uk-button uk-border-pill uk-width-1-1 uk-margin-small-bottom">Показать контакты
                     продавца</button>
 
             </div>
