--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -287,7 +287,7 @@
                                     </div>
                                     <div class="uk-width-expand">
                                         <h4 class="uk-comment-title uk-margin-remove"><a class="uk-link-reset"
-                                                href="#">{{message.id_creator}}</a></h4>
+                                                href="#">{{message.id_comentator}}</a></h4>
                                         {% if message.flag == "day" %}
                                         <p class="uk-comment-meta uk-margin-remove-top"><a class="uk-link-reset"
                                                 href="#">{{message.created_data}}</a>&nbsp;days ago.</p>
