--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -318,8 +318,8 @@
                 <div class="uk-flex uk-flex-center uk-text-center"
                     style="background-color: rgba(196, 196, 196, 0.5); border-radius: 20px; padding: 30px 0;">
                     <div class=" uk-margin-right uk-height-small">
-                        <h3>4.7</h3>
-                        <p>На основании <br>120 отзывов</p>
+                        <h3>{{products.rating}}</h3>
+                        <p>На основании <br>{{products.rate_sum}} отзывов</p>
                         <div>
                             <span>&#9733</span>
                             <span>&#9733</span>
