--- a/bizopt/BO/templates/resumes.html
+++ b/bizopt/BO/templates/resumes.html
@@ -27,29 +27,28 @@
                 профиле бренда ты найдешь информацию и товары бренда</h3>
         </div>
 
-        {% for item in brands %}
-        <a href="/{{item.text}}">{{item.text}}</a>
-        {% endfor %}
 
         <div class="uk-flex uk-flex-wrap uk-flex-wrap-middle uk-width-1" style="justify-content: center;">
 
-            <a href="" class="uk-text-center uk-width-2-5" style="margin: 2%">
-                <div class=" uk-inline-clip uk-transition-toggle" style="border: 3px solid black;" tabindex="0">
-                    <img src="https://cdn1.flamp.ru/e56d2de8c4cd3239c75e9cc11540442f.jpg" alt="">
+            {% for shop in brands %}
+            <a href="{{shop.name}}" class="uk-text-center uk-width-2-5" style="margin: 2%;">
+                <div data-src="{{shop.logoImage.url}}"
+                    class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-inline-clip uk-transition-toggle"
+                    style="border: 3px solid black;" tabindex="0" uk-img>
+
                     <div class="uk-transition-fade uk-position-cover uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle"
                         style="background-color: #0a3644e6;height: 100%; width: 100%; margin: 0 auto; padding: 10%;">
 
-                        <div class="uk-width-1">
-                            <h2 style="color: white;" class="uk-article-title">Heading</h2>
+                        <div class="uk-width-1" style="padding: 1%;">
+                            <h1 style="color: white;" class="uk-article-title">{{shop.name}}</h1>
 
-                            <p style="color: white" class="uk-text-left uk-text-break">
-                                qweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqwewewwqweqweqweqweqweqweqweweww
-                            </p>
+                            <p style="color: white; font-size: 1.2em;" class="uk-text-center uk-text-break">{{shop.category}}</p>
                         </div>
 
                     </div>
                 </div>
             </a>
+            {% endfor %}
 
         </div>
 
