--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -148,7 +148,7 @@
 
     <div class="uk-flex uk-flex-top uk-text-left" style="margin-top: 20px">
 
-        <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m" style="box-shadow: none; ">
+        <!-- <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m" style="box-shadow: none; ">
             <h1>Отзывы</h1>
             <div class="d-flex flex-row" style="padding-bottom: 10px;">
 
@@ -174,7 +174,7 @@
                     color: #f8ce0b;
                 }
             </style>
-        </div>
+        </div> -->
         <!-- <div class="uk-card uk-card-default uk-card-body uk-width-1-2@m" style="box-shadow: none; border-left: 1px solid rgb(156, 156, 156)">
             <h1>Запросы</h1>
             <div style="margin: auto">
