--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -328,7 +328,7 @@
                             <span>&#9734</span>
                         </div>
                     </div>
-                    <div class="uk-margin-left uk-height-small" style="width: 40%;text-align: left">
+                    <!-- <div class="uk-margin-left uk-height-small" style="width: 40%;text-align: left">
                         <div class="uk-grid-small" uk-grid>
                             <div class="uk-width-expand" uk-leader="fill:_">1</div>
                             <div>
@@ -354,7 +354,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
