save images edit profile

--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -28,7 +28,7 @@
                         <label class="uk-form-label">
                             <h4>Имя</h4>
                         </label>
-                        <input class="uk-input uk-border-rounded" name="first_naem" type="text" id="first_name"
+                        <input class="uk-input uk-border-rounded" name="first_name" type="text" id="first_name"
                             placeholder="{{user.first_name}}" value="{{user.first_name}}">
                     </div>
 
