--- a/bizopt/BO/templates/messanger.html
+++ b/bizopt/BO/templates/messanger.html
@@ -1,5 +1,5 @@
 
-    
+    <div style="height: 80%; margin: 0 auto; width: 80%" class="uk-position-bottom">
         <!-- <form action="GET"> -->
         <div class="uk-card uk-card-default uk-border-rounded uk-margin uk-position-bottom" style="height: 100%; ">
             <div class="uk-card-body uk-panel uk-panel-scrollable uk-padding-small"
@@ -58,6 +58,7 @@
                     </div>
                 </div>
             </form>
+        </div>
 
     </div>
 
@@ -129,4 +130,3 @@
     });
 </script>
 
-</html>
