--- a/bizopt/BO/templates/chatRoom.html
+++ b/bizopt/BO/templates/chatRoom.html
@@ -2,37 +2,81 @@
 
 {% block content %}
 
+<head>
+    <meta charset="UTF-8">
+    <title>BeFreela</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+
+</head>
 
 
 <body>
 
-    <div class="container">
-        <div style="margin: 0 auto;" class="uk-position-bottom">
-            {% include "baseProductCard.html" %}
-        </div>
-        <div class="panel">
+<body>
+    
+    <div class="overview-page">
+        <div id="MainWindowContainer" style="width: 100px; height: 100px;"></div>
+        <div class="container12">
+
             {% for chat in chats %}
-            <li class="uk-active"><a href="/chat/{{chat}}">чат</a></li>
+            <button type="button"class="Btn">Чат</button>
             {% endfor %}
+
+            <!-- <a href="/chat/{{chat}}">чат</a> -->
+
         </div>
     </div>
 
 </body>
 
-<style type="text/css">
+<script>
 
-    .container {
-        width: 100%;
-        height: 100%;
-        display: flex;
-    }
 
-    .panel {
+    $(function () {
+        var num = window.location.search[1];
+        if (localStorage.page != null) {
+            num = localStorage.page
+        } else {
+            num = 5;
+        }
+        var xhr = new XMLHttpRequest()
+        xhr.open('GET', `chat/${num}/`)
+        xhr.onload = function () {
+            $('#MainWindowContainer').html(xhr.response)
+        }
+        xhr.send()
+
+    });
+
+    $('.Btn').on('click', {}, function (inBody) {
+        var xhr = new XMLHttpRequest()
+        // var index = $(this).index() + 1
+        var index = 5
+        localStorage.page = index
+        xhr.open('GET', `chat/${index}/`)
+        xhr.onload = function () {
+            $('#MainWindowContainer').html(xhr.response)
+        }
+        xhr.send()
+    });
+
+</script>
+
+<style>
+
+    .container12 {
+        width: 500px;
         width: 300px;
-        height: 100vh;
         background-color: #ccc;
     }
 
+    .overview-page {
+        display: flex;
+    }
 
 </style>
 
