--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -66,9 +66,7 @@
                             <li class="uk-nav-divider"></li>
                             <li class="uk-active"><a href="/edit/">Настройки профиля</a></li>
                             <li class="uk-active"><a href="/logout/">Выйти</a></li>
-                            {% for chat in chats %}
-                                <li class="uk-active"><a href="/chat/{{chat}}">чат</a></li>
-                            {% endfor %}
+                            <li class="uk-active"><a href="chat">Чат</a></li>
                         </ul>
                     </div>
                 </li>
